# server/internal/entities/assignment.go
@@ -8,3 +8,19 @@ type Assignment struct {
 	Files        []string `json:"files" db:"files"`
 	DisciplineID int      `json:"discipline_id" db:"discipline_id"`
 }
+
+type CreateAssignment struct {
+	Name         string   `json:"name" db:"name"`
+	Deadline     string   `json:"deadline" db:"deadline"`
+	Description  string   `json:"description" db:"description"`
+	Files        []string `json:"files" db:"files"`
+	DisciplineID int      `json:"discipline_id" db:"discipline_id"`
+}
+
+type UpdateAssignment struct {
+	Name         string   `json:"name" db:"name"`
+	Deadline     string   `json:"deadline" db:"deadline"`
+	Description  string   `json:"description" db:"description"`
+	Files        []string `json:"files" db:"files"`
+	DisciplineID int      `json:"discipline_id" db:"discipline_id"`
+}
